chore: Update link to search_grammar

--- a/README.org
+++ b/README.org
@@ -432,9 +432,12 @@ yarn start
 yarn test
 #+END_SRC
 
-**** Details
+**** Search
+:PROPERTIES:
+:CUSTOM_ID: search_grammar
+:END:
 
-For searching the Org file, there's a [[file:src/lib/headline_filter_parser.grammar.pegjs][grammar]] for the search
+For searching the Org file, there's a [[https://github.com/200ok-ch/organice/blob/master/src/lib/headline_filter_parser.grammar.pegjs][grammar]] for the search
 clause. It's written in [[https://pegjs.org/][pegjs]]. Generating the parser code happens
 automatically on =yarn start|build|test=. When working on the parser,
 you can manually generate it with:
