--- a/sample.org
+++ b/sample.org
@@ -299,6 +299,18 @@ Using the filter input, you can search for headlines. Specifically, you can sear
 
 When a header is narrowed, and the user uses the 'search' or 'task list' feature, then the searched header list is automatically narrowed to only subheaders of the originally narrowed header.
 
+** Bookmarks
+
+After entering a search string, you can bookmark it using the ⭐ button.
+
+Bookmarked search strings populate the suggestions if no search string is entered into the input field.
+
+Bookmarks are saved by context, so there are separate bookmarks for search, task-list, and refile.
+
+There are at most ten bookmarks for a context. Newly saved bookmarks are inserted at the top of the list. If the list gets too long, the last search strings are dropped. Duplicate bookmarks are dropped too. The list of bookmarks is ordered by last used.
+
+Bookmarks are unaware of file context. Therefore, you always have the same bookmarks.
+
 ** Differences Search and Task List
 
 - In the task list, you can tap on the date to switch to a more readable relative date format.
