--- a/README.org
+++ b/README.org
@@ -421,19 +421,19 @@ Then, fill in the blanks in ~.env~ with your Dropbox, Google Drive, or
 GitLab credentials. More information about that is in the section
 [[https://organice.200ok.ch/documentation.html#synchronization_back_ends][Synchronization back-ends]].
 
-**** Running the application
+*** Running the application
 
 #+BEGIN_SRC shell
 yarn start
 #+END_SRC
 
-**** Running the tests:
+*** Running the tests:
 
 #+BEGIN_SRC shell
 yarn test
 #+END_SRC
 
-**** Search
+*** Search
 :PROPERTIES:
 :CUSTOM_ID: search_grammar
 :END:
