--- a/changelog.org
+++ b/changelog.org
@@ -13,6 +13,9 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
 - Specify default webDAV URL in .env file
   - PR: https://github.com/200ok-ch/organice/pull/829
   - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏
+- Docker image recognizes env vars
+  - PR: https://github.com/200ok-ch/organice/pull/835
+  - see [[https://organice.200ok.ch/documentation.html#docker][doc]] for more information
 
 * [2022-06-03 Fri]
 ** Removed
