--- a/README.org
+++ b/README.org
@@ -618,7 +618,7 @@ organice is also available as a Docker image.
 
 The docker image recognizes a couple of environment variables. For
 example =ORGANICE_WEBDAV_URL= prefills the URL field in the WebDAV
-signin form. See [[docker-compose.yml]] for an example how to use it.
+signin form. See [[docker-compose.yaml]] for an example how to use it.
 
 A full list of such environment variables can be found in [[.env.sample]].
 
