--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">organice</string>
     <string name="title_activity_main">organice</string>
-    <string name="package_name">ch.twohundredok.organice</string>
-    <string name="custom_url_scheme">ch.twohundredok.organice</string>
+    <string name="package_name">com.twohundredok.organice</string>
+    <string name="custom_url_scheme">com.twohundredok.organice</string>
 </resources>
