doc: Update changelog

--- a/changelog.org
+++ b/changelog.org
@@ -8,6 +8,11 @@ All user visible changes to organice will be documented in this file.
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
 * [2022-06-29 Wed]
+** Fixed
+- Undo looks like it is persisting changes, but it persisted old
+  state. Hence, reloading the file was bringing back the version of
+  the file before undoing.
+  - PR: https://github.com/200ok-ch/organice/pull/861
 ** Changed
 - Simplify UX in task modal
   - "Change todo keyword set" is now an explicit button. Also, it's
