doc: Update changelog

--- a/changelog.org
+++ b/changelog.org
@@ -6,7 +6,13 @@
 All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
-
+* [2022-06-30 Thu]
+** Changed
+- Upgrade Dropbox authentication flow: switch from OAuth to OAuth 2
+  and PKCE
+  - Rationale: Dropbox switched OAuth from long lived tokens to short
+    lived tokens.
+  - PR: https://github.com/200ok-ch/organice/pull/851
 * [2022-06-29 Wed]
 ** Fixed
 - Undo looks like it is persisting changes, but it persisted old
