doc: Update changelog

--- a/changelog.org
+++ b/changelog.org
@@ -12,6 +12,9 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
   - PR: https://github.com/200ok-ch/organice/pull/875
   - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏
 * [2022-06-30 Thu]
+** Fixed
+- Change log renders above previously opened view component
+  - PR: https://github.com/200ok-ch/organice/pull/869
 ** Changed
 - Upgrade Dropbox authentication flow: switch from OAuth to OAuth 2
   and PKCE
