--- a/changelog.org
+++ b/changelog.org
@@ -6,6 +6,11 @@
 All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
+* [2022-07-04 Mon]
+** Added
+- Setting to change textbox height in the description editor
+  - PR: https://github.com/200ok-ch/organice/pull/875
+  - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏
 * [2022-06-30 Thu]
 ** Changed
 - Upgrade Dropbox authentication flow: switch from OAuth to OAuth 2
