doc: Update changelog

--- a/changelog.org
+++ b/changelog.org
@@ -6,15 +6,16 @@
 All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
+* [2022-07-06 Wed]
+** Fixed
+- Change log renders above previously opened view component
+  - PR: https://github.com/200ok-ch/organice/pull/869
 * [2022-07-04 Mon]
 ** Added
 - Setting to change textbox height in the description editor
   - PR: https://github.com/200ok-ch/organice/pull/875
   - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏
 * [2022-06-30 Thu]
-** Fixed
-- Change log renders above previously opened view component
-  - PR: https://github.com/200ok-ch/organice/pull/869
 ** Changed
 - Upgrade Dropbox authentication flow: switch from OAuth to OAuth 2
   and PKCE
